# AI-2026

./: .gitignore  README.md  pyproject.toml
ProgrammingAssignment1/: ex1.ipynb  ex1_utils.py
ProgrammingAssignment1/_OriginalFiles/: ex1.ipynb
ProgrammingAssignment2/: ex2.ipynb
ProgrammingAssignment3/: ex3.ipynb  ex3_utils.py
ProgrammingAssignment4/: ex4.ipynb  ex4_utils.py  player_stats.txt  quitter_stats.txt  rational_stats.txt  risk_averse_stats.txt  risk_seeker_stats.txt
ProgrammingAssignment5/: ex5.ipynb
ProgrammingAssignment6/: ex6.ipynb  ex6_utils.py
