[tool.poetry]
name = "ai-2026"
description = "Workspace for Artificial Intelligence 521495A-3009 assignments and notebooks"
authors = ["Ahmed Zuhayr <zuhayr2003@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
jupyter = "^1.1.1"
matplotlib = "^3.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
